--- a/software.html
+++ b/software.html
@@ -39,44 +39,56 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4310455002'>Job Application for Sr. Software Engineer (React.js / Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/drweng/jobs/1783586'>Job Application for Software Developer - Data Specialist at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/invision/jobs/1793919'>Job Application for Senior Software Engineer at InVision</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4007101002'>Job Application for Fullstack Software Engineer at SevenRooms</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4310455002'>Job Application for Sr. Software Engineer (React.js / Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4345528002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4345537002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4345557002'>Job Application for Sr. Software Engineer (Java) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4346436002'>Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4346436002'>Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4346442002'>Job Application for Sr. Software Engineer (Business Intelligence Solutions & Architect) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4369945002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4371357002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://genesys.referrals.selectminds.com/jobs/software-engineer-3709'>Software Engineer - Genesys Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-3710'>Associate Software Engineer - Genesys Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://wmp.referrals.selectminds.com/jobs/big-data-software-developer-covering-maternity-leave-up-to-12-months-fixed-term-contract-613'>Big Data Software Developer - covering maternity leave up to 12 months fixed term contract - Careers at WMP Careers</a></h5> 
@@ -91,7 +103,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://elliptic.workable.com/j/5B9D7A9B6E'>Elliptic - Jobs: Software Engineer (Full Stack) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elliptic.workable.com/j/5B9D7A9B6E'>Elliptic - Jobs: Software Engineer (Full Stack) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -99,7 +111,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://blickfeld.join.com/jobs/271036-senior-software-engineer-m-f-d'>Job @ Blickfeld (Munich): Senior Software Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://blickfeld.join.com/jobs/271036-senior-software-engineer-m-f-d'>Job @ Blickfeld (Munich): Senior Software Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -151,15 +163,15 @@
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999692323814-software-engineer-frontend-point-of-sale-invoices'>Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -183,7 +195,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -195,7 +207,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369766002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369766002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -279,7 +291,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -323,11 +335,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/argo/jobs/1791009'>Job Application for Lead Software Engineer, Onboard Platforms at Argo AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/argo/jobs/1791009'>Job Application for Lead Software Engineer, Onboard Platforms at Argo AI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -339,7 +351,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/239aed50-ebd5-4e73-bbb3-f4be512865ad'>Ancestry - Senior Software Engineer, Front-end</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/239aed50-ebd5-4e73-bbb3-f4be512865ad'>Ancestry - Senior Software Engineer, Front-end</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -356,7 +368,7 @@ Services division. This Senior Software Engineer will architect, design, build?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692409880-senior-software-engineer-dfm-visa-digital-developer-platform-vddp-'>Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692409880-senior-software-engineer-dfm-visa-digital-developer-platform-vddp-'>Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -398,7 +410,7 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/5UbDttvInv/Firmware-Software-Engineer-IV'>Firmware Software Engineer IV - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/5UbDttvInv/Firmware-Software-Engineer-IV'>Firmware Software Engineer IV - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -433,18 +445,6 @@ places to eat worldwide and 450+ million unique monthly visitors, we help?...</p
 <h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/varomoney/e7bdaa31-325a-4376-bab4-6b0bd667724d'>Varo Money - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
-<p><span class="badge badge-light">Krakow, Poland</span></p>
-<p>Posted on:: 2019-07-27</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/24CCF1B9EA'>Anko - Jobs: Sr. Software Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Apply online for the job of Sr. Software Engineer at Anko.</p>
 <hr/>
 
 
